# memo_manager

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
