[package]
name = "memo_manager"
version = "0.1.0"
authors = ["Akira Hasegawa <akira.hasegawa@jaist.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
